[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Enemies/Slimy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Hazards/Enemies/slimy_walk.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemies/Slimy_FSM.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Enemies/slimy_land.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Enemies/slimy_jump.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 6.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 6.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 6 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=15]
radius = 109.225

[node name="Slimy" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 6
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 9.5 )
shape = SubResource( 1 )

[node name="Jumpbox" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 2 )
collision_layer = 0
monitoring = false
monitorable = false
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jumpbox"]
position = Vector2( 8, 4.5 )
shape = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, 3 )
collision_layer = 256
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 8, 6.5 )
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2( 0, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 8, 7 )
shape = SubResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, 11 )
frames = SubResource( 10 )
animation = "walk"
frame = 2
playing = true

[node name="LeftEdge" type="RayCast2D" parent="."]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 4

[node name="RightEdge" type="RayCast2D" parent="."]
position = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 4

[node name="ProximityCheck" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProximityCheck"]
position = Vector2( 8, 10 )
shape = SubResource( 15 )

[node name="JumpWait" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 400.0
bus = "Sfx"

[node name="Land" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 400.0
bus = "Sfx"

[connection signal="body_entered" from="Jumpbox" to="." method="_on_Jumpbox_body_entered"]
[connection signal="body_exited" from="Jumpbox" to="." method="_on_Jumpbox_body_exited"]
[connection signal="body_entered" from="ProximityCheck" to="StateMachine" method="_on_ProximityCheck_body_entered"]
[connection signal="body_exited" from="ProximityCheck" to="StateMachine" method="_on_ProximityCheck_body_exited"]
[connection signal="timeout" from="JumpWait" to="." method="_on_JumpWait_timeout"]
